--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,22 +1,28 @@
 [workspace]
-members = ["host", "methods"]
+members = ["host", "methods", "methods/guest", "core"]
 resolver = "2"
 
 [workspace.dependencies]
 
-risc0-zkvm = { version = "2.0.2", features = ["metal"] }
+alloy = { version = "0.12", features = ["full"] }
+alloy-primitives = { version = "0.8", features = ["rlp", "serde", "std"] }
+alloy-sol-types = { version = "0.8" }
+
+risc0-zkvm = { version = "2.0.2", features = ["prove"] }
 risc0-steel = { git = "https://github.com/risc0/risc0-ethereum", tag = "v2.0.2" }
 
+top-n-holders-core = { path = "core" }
+
 # Always optimize; building and running the guest takes much longer without optimization.
-[profile.dev]
-opt-level = 3
-
-[profile.dev.build-override]
-opt-level = 3
-
-[profile.release]
-debug = 1
-lto = true
-
-[profile.release.build-override]
-opt-level = 3
+#[profile.dev]
+#opt-level = 3
+#
+#[profile.dev.build-override]
+#opt-level = 3
+#
+#[profile.release]
+#debug = 1
+#lto = true
+#
+#[profile.release.build-override]
+#opt-level = 3
