--- a/methods/guest/Cargo.toml
+++ b/methods/guest/Cargo.toml
@@ -1,15 +1,16 @@
 [package]
-name = "prove-top-n-holders"
+name = "top-n-holders-guest"
 version = "0.1.0"
 edition = "2021"
 
-[workspace]
-
 [dependencies]
-json = "0.12"
-alloy-primitives = { version = "1.1.0", features = ["serde"] }
+top-n-holders-core = { workspace = true }
+
+alloy-primitives = { workspace = true }
+alloy-sol-types = { workspace = true }
 serde = { version = "1.0.219", features = ["derive"]}
-serde_json = "1.0.140"
+risc0-steel = { workspace = true, features = ["default", "unstable-verifier"] }
+#risc0-steel = { git = "https://github.com/risc0/risc0-ethereum", tag = "v2.0.2" }
 risc0-zkvm = { version = "2.0.2", default-features = false, features = [
     "std",
 ] }
