--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,15 +14,15 @@ risc0-steel = { git = "https://github.com/risc0/risc0-ethereum", tag = "v2.0.2" 
 top-n-holders-core = { path = "core" }
 
 # Always optimize; building and running the guest takes much longer without optimization.
-#[profile.dev]
-#opt-level = 3
-#
-#[profile.dev.build-override]
-#opt-level = 3
-#
-#[profile.release]
-#debug = 1
-#lto = true
-#
-#[profile.release.build-override]
-#opt-level = 3
+[profile.dev]
+opt-level = 3
+
+[profile.dev.build-override]
+opt-level = 3
+
+[profile.release]
+debug = 1
+lto = true
+
+[profile.release.build-override]
+opt-level = 3
