--- a/methods/guest/Cargo.toml
+++ b/methods/guest/Cargo.toml
@@ -3,14 +3,30 @@ name = "top-n-holders-guest"
 version = "0.1.0"
 edition = "2021"
 
-[dependencies]
-top-n-holders-core = { workspace = true }
+[workspace]
 
-alloy-primitives = { workspace = true }
-alloy-sol-types = { workspace = true }
+[dependencies]
+top-n-holders-core = { path = "../../core" }
+
+alloy-primitives = { version = "0.8" }
+alloy-sol-types = { version = "0.8" }
 serde = { version = "1.0.219", features = ["derive"]}
-risc0-steel = { workspace = true, features = ["default", "unstable-verifier"] }
-#risc0-steel = { git = "https://github.com/risc0/risc0-ethereum", tag = "v2.0.2" }
-risc0-zkvm = { version = "2.0.2", default-features = false, features = [
-    "std",
-] }
+risc0-steel = { git = "https://github.com/risc0/risc0-ethereum", tag = "v2.0.2" }
+risc0-zkvm = { version = "2.0.2", default-features = false, features = ["std", "unstable"] }
+sha2 = "=0.10.8"
+#k256 = { version = "=0.13.4", features = [
+#    "arithmetic",
+#    "serde",
+#    "expose-field",
+#    "std",
+#    "ecdsa",
+#], default-features = false }
+tiny-keccak = { version = "=2.0.2", features = ["keccak"] }
+
+k256 = "=0.13.4"
+
+[patch.crates-io]
+crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.5-risczero.0" }
+k256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "k256/v0.13.4-risczero.1" }
+sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
+tiny-keccak = { git = "https://github.com/risc0/tiny-keccak", tag = "tiny-keccak/v2.0.2-risczero.0" }
