--- a/methods/guest/Cargo.toml
+++ b/methods/guest/Cargo.toml
@@ -14,16 +14,14 @@ serde = { version = "1.0.219", features = ["derive"]}
 risc0-steel = { git = "https://github.com/risc0/risc0-ethereum", tag = "v2.0.2" }
 risc0-zkvm = { version = "2.0.2", default-features = false, features = ["std", "unstable"] }
 sha2 = "=0.10.8"
-#k256 = { version = "=0.13.4", features = [
-#    "arithmetic",
-#    "serde",
-#    "expose-field",
-#    "std",
-#    "ecdsa",
-#], default-features = false }
+k256 = { version = "=0.13.4", features = [
+    "arithmetic",
+    "serde",
+    "expose-field",
+    "std",
+    "ecdsa",
+], default-features = false }
 tiny-keccak = { version = "=2.0.2", features = ["keccak"] }
-
-k256 = "=0.13.4"
 
 [patch.crates-io]
 crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.5-risczero.0" }
