--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -6,3 +6,5 @@ edition = "2021"
 [dependencies]
 alloy-primitives = {workspace = true}
 serde = { version = "1.0", default-features = false }
+risc0-steel = { workspace = true }
+revm-primitives = "19.0.0"
